frontend/test/should_pass/dangle_007.grg
test r(-a:Edge->) {
    y:Node -a-> x:Node;
}
