frontend/test/should_fail/edge_into_neg.grg
test t {
	a:Node-e:Edge->;
	negative {
		x:Node-e->y:Node;
	}
}
